corregi CSS de Skills y empece con la seccion de experiencias

--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-intereses.css">
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-item.css">
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-lista.css">
+    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-parrafo.css">
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-tabla.css">
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-td.css">
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-texto.css">
-    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-titulo.css">
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-titulo-info-personal.css">
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-titulo-intereses.css">
     <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-tr.css">
     <link rel="stylesheet" href="assets/css/skills.css">
     <link rel="stylesheet" href="assets/css/skills/skills-icon.css">
-    <link rel="stylesheet" href="assets/css/skills/skills-titulo.css">
     <link rel="stylesheet" href="assets/css/skills/skills-box-hard-soft.css">
+    <link rel="stylesheet" href="assets/css/skills/skills-hard-soft.css">
     <link rel="stylesheet" href="assets/css/skills/skills-hard/skills-item.css">
     <link rel="stylesheet" href="assets/css/skills/skills-hard/skills-lista.css">
     <link rel="stylesheet" href="assets/css/skills/skills-hard/skills-hard-titulo.css">
@@ -62,7 +62,6 @@
     <link rel="stylesheet" href="assets/css/skills/skills-soft/skills-soft-titulo-skill.css">
     <link rel="stylesheet" href="assets/css/skills/skills-soft/skills-soft-titulo.css">
     <link rel="stylesheet" href="assets/css/experiencia.css">
-    <link rel="stylesheet" href="assets/css/experiencia/experiencia-icon-link.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-icon.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-item.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-lista.css">
@@ -204,7 +203,7 @@
                 <div class="skills__icon"></div>
                 <h3 class="skills__titulo">Skills</h3>
                 <div class="skills__box-hard-soft">
-                    <div class="skills__hard">
+                    <div class="skills__hard-soft">
                         <h4 class="skills__hard-titulo">Hard Skills</h4>
                         <ul class="skills__lista">
                             <li class="skills__item">
@@ -272,7 +271,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="skills__soft">
+                    <div class="skills__hard-soft">
                         <h4 class="skills__soft-titulo">Soft Skills</h4>
                         <ul class="skills__soft-lista">
                             <li class="skills__soft-item"> 
@@ -339,7 +338,7 @@
                 <h3 class="experiencia__titulo">Experiencia</h3>
                 <ul class="experiencia__lista">
                     <li class="experiencia__item">
-                        <div class="experiencia__icon-link experiencia__icon-link--ahorcado"></div>
+                        <!-- <div class="experiencia__icon-link experiencia__icon-link--ahorcado"></div> -->
                         <div class="experiencia__box">
                             <div class="experiencia__box-textos">
                                 <h4 class="experiencia__box-texto-titulo">Juego del ahorcado</h4>
@@ -352,7 +351,6 @@
                         </div>
                     </li>
                     <li class="experiencia__item">
-                        <div class="experiencia__icon-link experiencia__icon-link--encriptado"></div>
                         <div class="experiencia__box">
                             <div class="experiencia__box-textos">
                                 <h4 class="experiencia__box-texto-titulo">decodificador de texto</h4>
@@ -364,11 +362,6 @@
                             </div>
                         </div>
                     </li>
-                    <!-- <li>
-                        <a class="experiencia__link" href="https://jdario9912.github.io/Primer-challenge-Alura-Latam/" target="_blanck">
-                            <div class="experiencia__icon-link experiencia__icon-link--encriptado"></div>
-                        </a>
-                    </li> -->
                 </ul>
             </section>
             <section id="formacion" class="formacion">
