--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-icon.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-item.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-lista.css">
-    <link rel="stylesheet" href="assets/css/experiencia/experiencia-titulo.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-link.css">
-    <link rel="stylesheet" href="assets/css/experiencia/experiencia-box.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-box-links.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-box-texto-parrafo.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-box-texto-tiulo.css">
@@ -338,30 +336,26 @@
                 <h3 class="experiencia__titulo">Experiencia</h3>
                 <ul class="experiencia__lista">
                     <li class="experiencia__item">
-                        <!-- <div class="experiencia__icon-link experiencia__icon-link--ahorcado"></div> -->
-                        <div class="experiencia__box">
-                            <div class="experiencia__box-textos">
-                                <h4 class="experiencia__box-texto-titulo">Juego del ahorcado</h4>
-                                <p class="experiencia__box-texto-parrafo">Alura challenge hecho con HTML5, CSS3 y JavaScript</p>
-                            </div>
-                            <div class="experiencia__box-links">
-                                <a class="experiencia__link experiencia__link--repositorio" href="https://github.com/jdario9912/Juego-del-ahoracado-Alura" target="_blank">repositorio</a>
-                                <a class="experiencia__link experiencia__link--demo" href="https://jdario9912.github.io/Juego-del-ahoracado-Alura/" target="_blank">ver demo</a>
-                            </div>
+                        <div class="experiencia__box-textos">
+                            <h4 class="experiencia__box-texto-titulo">Juego</h4>
+                            <p class="experiencia__box-texto-parrafo">Alura challenge hecho con HTML5, CSS3 y JavaScript</p>
+                        </div>
+                        <div class="experiencia__box-links">
+                            <a class="experiencia__link experiencia__link--repositorio" href="https://github.com/jdario9912/Juego-del-ahoracado-Alura" target="_blank">repositorio</a>
+                            <a class="experiencia__link experiencia__link--demo" href="https://jdario9912.github.io/Juego-del-ahoracado-Alura/" target="_blank">ver demo</a>
                         </div>
                     </li>
                     <li class="experiencia__item">
-                        <div class="experiencia__box">
-                            <div class="experiencia__box-textos">
-                                <h4 class="experiencia__box-texto-titulo">decodificador de texto</h4>
-                                <p class="experiencia__box-texto-parrafo">Alura challenge hecho con HTML5, CSS3 y JavaScript</p>
-                            </div>
-                            <div class="experiencia__box-links">
-                                <a class="experiencia__link experiencia__link--repositorio" href="https://github.com/jdario9912/Primer-challenge-Alura-Latam" target="_blank">repositorio</a>
-                                <a class="experiencia__link experiencia__link--demo" href="https://jdario9912.github.io/Primer-challenge-Alura-Latam/" target="_blank">ver demo</a>
-                            </div>
+                        <div class="experiencia__box-textos">
+                            <h4 class="experiencia__box-texto-titulo">decodificador de texto</h4>
+                            <p class="experiencia__box-texto-parrafo">Alura challenge hecho con HTML5, CSS3 y JavaScript</p>
+                        </div>
+                        <div class="experiencia__box-links">
+                            <a class="experiencia__link experiencia__link--repositorio" href="https://github.com/jdario9912/Primer-challenge-Alura-Latam" target="_blank">repositorio</a>
+                            <a class="experiencia__link experiencia__link--demo" href="https://jdario9912.github.io/Primer-challenge-Alura-Latam/" target="_blank">ver demo</a>
                         </div>
                     </li>
+                    
                 </ul>
             </section>
             <section id="formacion" class="formacion">
