corregi CSS del footer y formacion

--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-box-texto-tiulo.css">
     <link rel="stylesheet" href="assets/css/experiencia/experiencia-box-texto.css">
     <link rel="stylesheet" href="assets/css/formacion.css">
+    <link rel="stylesheet" href="assets/css/formacion/formacion-icon.css">
+    <link rel="stylesheet" href="assets/css/formacion/formacion-lista.css">
+    <link rel="stylesheet" href="assets/css/formacion/formacion-item.css">
+    <link rel="stylesheet" href="assets/css/formacion/formacion-icons.css">
+    <link rel="stylesheet" href="assets/css/formacion/formacion-lista-titulo.css">
+    <link rel="stylesheet" href="assets/css/formacion/formacion-parrafo.css">
+    <link rel="stylesheet" href="assets/css/formacion/formacion-textos.css">
+    <link rel="stylesheet" href="assets/css/formacion/formacion-link.css">
     <link rel="stylesheet" href="assets/css/contacto.css">
     <link rel="stylesheet" href="assets/css/contacto/contacto-titulo.css">
     <link rel="stylesheet" href="assets/css/contacto/contacto-icon.css">
@@ -80,39 +88,29 @@
     <link rel="stylesheet" href="assets/css/contacto/contacto-input.css">
     <link rel="stylesheet" href="assets/css/contacto/contacto-btn.css">
     <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="assets/css/formacion/formacion-icon.css">
-    <link rel="stylesheet" href="assets/css/formacion/formacion-titulo.css">
-    <link rel="stylesheet" href="assets/css/formacion/formacion-lista.css">
-    <link rel="stylesheet" href="assets/css/formacion/formacion-fila.css">
-    <link rel="stylesheet" href="assets/css/formacion/formacion-item.css">
-    <link rel="stylesheet" href="assets/css/formacion/formacion-icons.css">
-    <link rel="stylesheet" href="assets/css/formacion/formacion-lista-titulo.css">
-    <link rel="stylesheet" href="assets/css/formacion/formacion-parrafo.css">
-    <link rel="stylesheet" href="assets/css/formacion/formacion-textos.css">
-    <link rel="stylesheet" href="assets/css/formacion/formacion-link.css">
 </head>
 <body class="body">
     <div class="container">
         <header class="menu">
             <h1 class="menu__nombre">Joel</h1>
             <nav class="menu__nav">
-            <ul class="menu__lista">
-                <li class="menu__item">
-                    <a href="#presentacion" class="menu__link">Sobre</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#skills" class="menu__link">Skills</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#experiencia" class="menu__link">Experiencia</a>
-                </li>
-                <li  class="menu__item">
-                    <a href="#formacion" class="menu__link">Formación</a>
-                </li>
-                <li class="menu__item">
-                    <a href="#contacto" class="menu__link">Contácto</a>
-                </li>
-            </ul>
+                <ul class="menu__lista">
+                    <li class="menu__item">
+                        <a href="#presentacion" class="menu__link">Sobre</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#skills" class="menu__link">Skills</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#experiencia" class="menu__link">Experiencia</a>
+                    </li>
+                    <li  class="menu__item">
+                        <a href="#formacion" class="menu__link">Formación</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#contacto" class="menu__link">Contácto</a>
+                    </li>
+                </ul>
             </nav>
         </header>
         <main>
@@ -354,90 +352,77 @@
                             <a class="experiencia__link experiencia__link--repositorio" href="https://github.com/jdario9912/Primer-challenge-Alura-Latam" target="_blank">repositorio</a>
                             <a class="experiencia__link experiencia__link--demo" href="https://jdario9912.github.io/Primer-challenge-Alura-Latam/" target="_blank">ver demo</a>
                         </div>
-                    </li>
-                    
+                    </li>                    
                 </ul>
             </section>
             <section id="formacion" class="formacion">
                 <div class="formacion__icon"></div>
                 <h3 class="formacion__titulo">Formación IT</h3>
                 <ul class="formacion__lista">
-                    <div class="formacion__fila formacion__fila--1">
-                        <li class="formacion__item">
-                            <a class="formacion__link" href="https://www.youtube.com/c/Alura" target="_blank">
-                                <div class="formacion__icons formacion__icons--alura"></div>
-                                <div class="formacion__textos">
-                                    <h4 class="formacion__lista-titulo">Alura</h4>
-                                    <p class="formacion__parrafo formacion__parrafo--1">Programador Web Full Stack</p>
-                                    <p class="formacion__parrafo formacion__parrafo--2">ONE - Oracle Next Eduducation</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="formacion__item">
-                            <a class="formacion__link" href="https://www.youtube.com/c/CodersFree" target="_blank">
-                                <div class="formacion__icons formacion__icons--coders-free"></div>
-                                <div class="formacion__textos">
-                                    <h4 class="formacion__lista-titulo">Coders Free</h4>
-                                    <p class="formacion__parrafo formacion__parrafo--1">Tailwind CSS3</p>
-                                    <p class="formacion__parrafo formacion__parrafo--2">Autodidacta</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="formacion__item">
-                            <a class="formacion__link" href="https://www.youtube.com/c/pildorasinformaticas" target="_blank">
-                                <div class="formacion__icons formacion__icons--pildoras"></div>
-                                <div class="formacion__textos">
-                                    <h4 class="formacion__lista-titulo">Pildoras Informáticas</h4>
-                                    <p class="formacion__parrafo formacion__parrafo--1">PHP/MySQL</p>
-                                    <p class="formacion__parrafo formacion__parrafo--2">Autodidacta</p>
-                                </div>
-                            </a>
-                        </li>
-                    </div>
-                    <div class="formacion__fila formacion__fila--2">
-                        <li class="formacion__item">
-                            <a class="formacion__link" href="https://www.youtube.com/c/pildorasinformaticas" target="_blank">
-                                <div class="formacion__icons formacion__icons--pildoras"></div>
-                                <div class="formacion__textos">
-                                    <h4 class="formacion__lista-titulo">SQL</h4>
-                                    <p class="formacion__parrafo formacion__parrafo--1">Pildoras Informáticas</p>
-                                    <p class="formacion__parrafo formacion__parrafo--2">Autodidacta</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="formacion__item">
-                            <a class="formacion__link" href="https://www.youtube.com/c/ErnestoP%C3%A9rezM" target="_blank">
-                                <div class="formacion__icons formacion__icons--wikipedia"></div>
-                                <div class="formacion__textos">
-                                    <h4 class="formacion__lista-titulo">Wikipedia de Ernesto</h4>
-                                    <p class="formacion__parrafo formacion__parrafo--1">Java inicial</p>
-                                    <p class="formacion__parrafo formacion__parrafo--2">Autodidacta</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="formacion__item">
-                            <a class="formacion__link" href="https://www.youtube.com/c/Freecodecamp" target="_blank">
-                                <div class="formacion__icons formacion__icons--free-code-camp"></div>
-                                <div class="formacion__textos">
-                                    <h4 class="formacion__lista-titulo">Free Code Camp</h4>
-                                    <p class="formacion__parrafo formacion__parrafo--1">Java Script inicial</p>
-                                    <p class="formacion__parrafo formacion__parrafo--2">Autodidacta</p>
-                                </div>
-                            </a>
-                        </li>
-                    </div>
-                    <div class="formacion__fila  formacion__fila--3">
-                        <li class="formacion__item">
-                            <a class="formacion__link" href="https://www.youtube.com/c/DorianDesings" target="_blank" rel="noopener noreferrer">
-                                <div class="formacion__icons formacion__icons--dorian"></div>
-                                <div class="formacion__textos">
-                                    <h4 class="formacion__lista-titulo">Dorian Desings</h4>
-                                    <p class="formacion__parrafo formacion__parrafo--1">HTML5</p>
-                                    <p class="formacion__parrafo formacion__parrafo--2">Autodidacta</p>
-                                </div>
-                            </a>
-                        </li>
-                    </div>
+                    <li class="formacion__item">
+                        <a class="formacion__link" href="https://www.youtube.com/c/Alura" target="_blank">
+                            <div class="formacion__icons formacion__icons--alura"></div>
+                            <div class="formacion__textos">
+                                <h4 class="formacion__lista-titulo">Alura</h4>
+                                <p class="formacion__parrafo formacion__parrafo--1">Programador Web Full Stack</p>
+                                <p class="formacion__parrafo formacion__parrafo--2">ONE - Oracle Next Eduducation</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="formacion__item">
+                        <a class="formacion__link" href="https://www.youtube.com/c/CodersFree" target="_blank">
+                            <div class="formacion__icons formacion__icons--coders-free"></div>
+                            <div class="formacion__textos">
+                                <h4 class="formacion__lista-titulo">Coders Free</h4>
+                                <p class="formacion__parrafo formacion__parrafo--1">Tailwind CSS3</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="formacion__item">
+                        <a class="formacion__link" href="https://www.youtube.com/c/pildorasinformaticas" target="_blank">
+                            <div class="formacion__icons formacion__icons--pildoras"></div>
+                            <div class="formacion__textos">
+                                <h4 class="formacion__lista-titulo">Pildoras Informáticas</h4>
+                                <p class="formacion__parrafo formacion__parrafo--1">PHP/MySQL</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="formacion__item">
+                        <a class="formacion__link" href="https://www.youtube.com/c/pildorasinformaticas" target="_blank">
+                            <div class="formacion__icons formacion__icons--pildoras"></div>
+                            <div class="formacion__textos">
+                                <h4 class="formacion__lista-titulo">SQL</h4>
+                                <p class="formacion__parrafo formacion__parrafo--1">Pildoras Informáticas</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="formacion__item">
+                        <a class="formacion__link" href="https://www.youtube.com/c/ErnestoP%C3%A9rezM" target="_blank">
+                            <div class="formacion__icons formacion__icons--wikipedia"></div>
+                            <div class="formacion__textos">
+                                <h4 class="formacion__lista-titulo">Wikipedia de Ernesto</h4>
+                                <p class="formacion__parrafo formacion__parrafo--1">Java inicial</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="formacion__item">
+                        <a class="formacion__link" href="https://www.youtube.com/c/Freecodecamp" target="_blank">
+                            <div class="formacion__icons formacion__icons--free-code-camp"></div>
+                            <div class="formacion__textos">
+                                <h4 class="formacion__lista-titulo">Free Code Camp</h4>
+                                <p class="formacion__parrafo formacion__parrafo--1">Java Script inicial</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="formacion__item">
+                        <a class="formacion__link" href="https://www.youtube.com/c/DorianDesings" target="_blank">
+                            <div class="formacion__icons formacion__icons--dorian"></div>
+                            <div class="formacion__textos">
+                                <h4 class="formacion__lista-titulo">Dorian Desings</h4>
+                                <p class="formacion__parrafo formacion__parrafo--1">HTML5</p>
+                            </div>
+                        </a>
+                    </li>
                 </ul>
             </section>
             <!-- <section id="contacto" class="contacto">
@@ -459,21 +444,21 @@
         </main>
         <footer class="footer">
             <ul class="footer__lista">
-                <li class="menu__item">
-                    <a href="#presentacion" class="menu__link">Sobre mí</a>
+                <li class="footer__item">
+                    <a href="#presentacion" class="menu__link">Sobre</a>
                 </li>
-                <li class="menu__item">
+                <li class="footer__item">
                     <a href="#skills" class="menu__link">Skills</a>
                 </li>
-                <li class="menu__item">
+                <li class="footer__item">
                     <a href="#experiencia" class="menu__link">Experiencia</a>
                 </li>
-                <li  class="menu__item">
+                <li  class="footer__item">
                     <a href="#formacion" class="menu__link">Formación</a>
                 </li>
-                <!-- <li class="menu__item">
+                <li class="footer__item">
                     <a href="#contacto" class="menu__link">Contácto</a>
-                </li> -->
+                </li>
             </ul>
             <p>&#169 Copyrigth <em class="footer__nombre">Joel</em> Dario Muñoz | <time class="footer__fecha">2022</time></p>
             <a class="footer__repositorio" href="https://github.com/jdario9912/portfolio" target="_blank"> repositorio</a>
