corregi justificacion de texto

--- a/index.html
+++ b/index.html
@@ -473,4 +473,5 @@
     </div>
 </body>
 <script src="./assets/script/validacion-formulario.js"></script>
+<script src="./assets/script/desplegar-nav.js"></script>
 </html>
