agregue color transparente al contenido de la presentacion en movile

--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
                         </div>
                     </li>                    
                 </ul>
+                <span>otras</span>
             </section>
             <section id="formacion" class="formacion">
                 <div class="formacion__icon"></div>
