probe aparicion de nav

--- a/index.html
+++ b/index.html
@@ -90,27 +90,28 @@
     <link rel="stylesheet" href="assets/css/contacto/contacto-btn.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/responsivo.css">
+    <link rel="stylesheet" href="assets/css/desplegar-nav.css">
 </head>
 <body class="body">
     <div class="container">
         <header class="menu">
             <h1 class="menu__nombre">Joel</h1>
-            <nav class="menu__nav">
-                <ul class="menu__lista">
-                    <li class="menu__item">
-                        <a href="#presentacion" class="menu__link">Sobre</a>
+            <nav id="menu__nav" class="menu__nav">
+                <ul id="menu__lista" class="menu__lista">
+                    <li id="menu__item" class="menu__item">
+                        <a id="menu__link" href="#presentacion" class="menu__link">Sobre</a>
                     </li>
-                    <li class="menu__item">
-                        <a href="#skills" class="menu__link">Skills</a>
+                    <li id="menu__item" class="menu__item">
+                        <a id="menu__link" href="#skills" class="menu__link">Skills</a>
                     </li>
-                    <li class="menu__item">
-                        <a href="#experiencia" class="menu__link">Experiencia</a>
+                    <li id="menu__item" class="menu__item">
+                        <a id="menu__link" href="#experiencia" class="menu__link">Experiencia</a>
                     </li>
-                    <li  class="menu__item">
-                        <a href="#formacion" class="menu__link">Formación</a>
+                    <li id="menu__item"  class="menu__item">
+                        <a id="menu__link" href="#formacion" class="menu__link">Formación</a>
                     </li>
-                    <li class="menu__item">
-                        <a href="#contacto" class="menu__link">Contácto</a>
+                    <li id="menu__item" class="menu__item">
+                        <a id="menu__link" href="#contacto" class="menu__link">Contácto</a>
                     </li>
                 </ul>
             </nav>
