agregue archivo CV

--- a/index.html
+++ b/index.html
@@ -162,20 +162,22 @@
                 <div class="sobre-mi__info-intereses">
                     <div class="sobre-mi__info-personal">
                         <h4 class="sobre-mi__titulo-info-personal">Información personal</h4>
-                        <table class="sobre-mi__tabla">
-                            <tr>
-                                <td class="sobre-mi__td sobre-mi__td--1">e-mail</td>
-                                <td class="sobre-mi__td">joeldario9912@gmail.com</td>
-                            </tr>
-                            <tr class="sobre-mi__tr">
-                                <td class="sobre-mi__td sobre-mi__td--1">Teléfono</td>
-                                <td class="sobre-mi__td">2942-669351</td>
-                            </tr>
-                            <tr>
-                                <td class="sobre-mi__td sobre-mi__td--1">Dirección</td>
-                                <td class="sobre-mi__td">Sunchales, Santa Fe, Argentina</td>
-                            </tr>
-                        </table>
+                        <address>
+                            <table class="sobre-mi__tabla">
+                                <tr>
+                                    <td class="sobre-mi__td sobre-mi__td--1">e-mail</td>
+                                    <td class="sobre-mi__td"> <a href="mailto:joeldario9912@gmail.com">joeldario9912@gmail.com</a></td>
+                                </tr>
+                                <tr class="sobre-mi__tr">
+                                    <td class="sobre-mi__td sobre-mi__td--1">Teléfono</td>
+                                    <td class="sobre-mi__td"> <a href="tel:+552942669351">2942-669351</a></td>
+                                </tr>
+                                <tr>
+                                    <td class="sobre-mi__td sobre-mi__td--1">Dirección</td>
+                                    <td class="sobre-mi__td">Sunchales, Santa Fe, Argentina</td>
+                                </tr>
+                            </table>
+                        </address>
                     </div>
                     <div class="sobre-mi__intereses">
                         <h4 class="sobre-mi__titulo-intereses">Me gusta</h4>
@@ -199,7 +201,7 @@
                         </ul>
                     </div>
                 </div>
-                <a href="#" class="sobre-mi__btn-descargar">
+                <a href="./assets/CV.pdf" class="sobre-mi__btn-descargar">
                     <h4 class="sobre_mi__btn-texto">
                         Descargar CV
                         <div class="sobre-mi__icon-descargar"></div>
@@ -366,7 +368,7 @@
                         </div>
                     </li>                    
                 </ul>
-                <span>otras</span>
+                <!-- <span>otras</span> -->
             </section>
             <section id="formacion" class="formacion">
                 <div class="formacion__icon"></div>
